# win-symlinks

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  design_review.md.resolved  install.ps1
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
crates/win-symlinks/: Cargo.toml
crates/win-symlinks-client/: Cargo.toml
crates/win-symlinks-client/src/: direct.rs  error.rs  lib.rs  pipe.rs  protocol.rs  service_identity.rs
crates/win-symlinks/src/: lib.rs
crates/win-symlinks/src/config/: mod.rs
crates/win-symlinks/src/ipc/: mod.rs
crates/win-symlinks/src/path_policy/: mod.rs
crates/win-symlinks/src/service/: mod.rs
crates/win-symlinks/src/symlink/: mod.rs
dev-docs/: architecture-navigation.md  design-broker-service.md  design-client-interfaces.md  design-core-policies.md  design-testing-qa.md  development-todo.md  handoff-client-crate-testing-review.md  handoff-client-crate.md  prompt-temp.md
dev-docs/temp/: handoff-client-crate-testing-review.md
docs/: howto-write-harness-agents-md.md  integration.md  windows-symlink-broker-design.md
src/: error.rs  lib.rs
src/client/: mod.rs
src/config/: mod.rs
src/doctor/: mod.rs
src/ipc/: mod.rs
src/path_policy/: mod.rs
src/service/: mod.rs
src/symlink/: mod.rs
