[package]
name = "win-symlinks"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.82"

[[bin]]
name = "ln"
path = "src/bin/ln.rs"

[[bin]]
name = "win-symlinks"
path = "src/bin/win-symlinks.rs"

[[bin]]
name = "win-symlinks-broker"
path = "src/bin/win-symlinks-broker.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v7", "serde"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Services",
  "Win32_System_Pipes",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_System_IO",
] }
