[package]
name = "win-symlinks-client"
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.82"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Pipes",
  "Win32_System_Services",
  "Win32_System_IO",
  "Win32_System_Threading",
] }
